@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.7 2005/02/24 08:45:13 agc Exp $
+$NetBSD: distinfo,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 
 SHA1 (swfdec-0.2.2.tar.gz) = f3cbc3fec455117d554d37ac4dda1d99fb592661
 RMD160 (swfdec-0.2.2.tar.gz) = e44e1d5890fd1b8e6b73fa0ed5d645dbb6203c88
